2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* rm.h (rm_method_id_string): Handle the case where ID is
	RM_object_status.
	* server.c (server_loop): Implement the object_status method.

	* ager.c (ager_loop): Set DESC->USER_DIRTY and DESC->REFERENCED as
	appropriate.
	* object.c (folio_object_alloc): Clear ODESC->USER_REFERENCED and
	ODESC->USER_DIRTY.
	(folio_object_alloc): Clear the object's user referenced and user
	dirty bits.
	* object.h (struct object_desc): Add fields user_dirty and
	user_referenced.
	(object_desc_unmap): Update DESC->USER_DIRTY and
	DESC->USER_REFERENCED appropriately.
	(object_desc_flush): LIkewise.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_flush): Take additional parameter
	CLEAR_KERNEL.  If true, also clear the kernel's status bits.

	* object.c (memory_object_alloc): Clear OBJECT's status bits
	before returning it.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_find_soft): If we don't claim ODESC, mark it as
	shared.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): If the caller's activity slot does not
	designate a valid activity object, just ignore the message.
	
2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (ager_start): Set the new thread's pager to the
	initial thread.
	* server.c (server_loop): If we get a message from a kernel (i.e.,
	Viengoos) thread, panic.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Don't flush shared pages, only unmap them.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_object_alloc): Use the strong variant of TYPE.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): To see if we are at the start of a period,
	check if ITERATIONS is a multiple of FREQ, not if it is zero.  Set
	each activity's statistic's period field.  Always increment
	iterations.
	(ager_loop): 

2008-02-21  Neal H. Walfield  <neal@gnu.org>
